docs/v0.9/06-settings/05-update.mdx
---
description: How to update Vertex and its dependencies.
---

# Updates

Updating Vertex or the different dependencies is an easy process. In the Web UI, go to **Settings**, then **Updates**.

Updates are fetched every time you click on "Check for Updates". When an update is available, a button will appear next to it. Clicking on it will start the update process.

:::warning Backup your data
While this process __should__ be safe, we recommend you to make a backup of your data before updating. To do so, clone your `live` and `live_kernel` folder in a safe place. This folder is located at the root of your Vertex installation, and contains all your data.
:::

:::info
Updating Vertex WebUI, Vertex Services or Vertex Dependencies takes effect immediately. However, a Vertex update will need a restart. This is marked with a warning next to the update button.
:::

:::info Vertex in Docker
If you are using Vertex in a Docker container, Vertex cannot update itself and will not be shown in the list. You will need to update the Docker image yourself.
:::
